--- a/templates/analyse.html
+++ b/templates/analyse.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h1 class="text-4xl font-bold">Analyse</h1>
+<h1 class="text-4xl font-bold">Analyses</h1>
 <iframe title="co2_dashboard" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=26693279-ac81-45cd-82eb-e7111a90eba6&autoAuth=true&ctid=a2e466aa-4f86-4545-b5b8-97da7c8febf3" frameborder="0" allowFullScreen="true"></iframe>
 
 {% endblock %}
