--- a/templates/model.html
+++ b/templates/model.html
@@ -5,6 +5,30 @@
 {% block content %}
 <div class="container">
   <h1 class="text-4xl font-bold mb-4">Model</h1>
-    
+  <h1>Address Form</h1>
+  <form method="POST" id="addressForm">
+      {{ form.hidden_tag() }}
+      {{ form.address.label }} {{ form.address(id='address', size=50, autocomplete='on') }}
+      <input type="hidden" id="latitude" name="latitude">
+      <input type="hidden" id="longitude" name="longitude">
+      <input id= "btn" type="submit" value="Submit">
+  </form>
+  
+  
+  <div>
+    Latitude: <span id="latitude-display">{{coordinates[0]}}</span><br>
+    Longitude: <span id="longitude-display">{{coordinates[1]}}</span>
+  </div>
 </div>
+<div id='searchBoxContainer'>
+  <input type='text' id='searchBox' />
+</div>
+
+<div id="myMap" style="position:relative;width:100%;min-width:290px;height:600px;background-color:gray"></div>
+
+<fieldset style="width:800px;margin-top:10px;">
+  <legend>Autosuggest with Map Sample</legend>
+  This sample shows the basic implementation of the autosuggestion module with a map. 
+</fieldset>
+
 {% endblock %}
