--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,3 +16,37 @@ body {
     color: #212529;
     text-align: left;
     background-color: #fff; }
+
+#map {
+    height: 400px;
+    width: 100%;
+}
+
+.msls-input {
+    position: relative;
+    display: inline-block;
+}
+
+.msls-container {
+    position: absolute;
+    z-index: 1000;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    max-height: 250px;
+    overflow-y: auto;
+}
+
+.msls-container ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.msls-container ul li {
+    padding: 8px 12px;
+    cursor: pointer;
+}
+
+.msls-container ul li:hover {
+    background-color: #f5f5f5;
+}
