--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://www.bing.com/api/maps/mapcontrol?key=AqCmXCSXpin76Mn5hLW5CVVvqbY88Ae9TbqET5mzzwohbCvs-ZbboA-OWuAoNThc&callback=loadMapScenario" async defer></script>
+    <link rel="stylesheet" href="https://www.bing.com/api/maps/mapcontrol?callback=loadMapScenario" async defer>
+    
 {% endblock %}
 
 {% block body %}
@@ -23,6 +27,56 @@
 
     {% block scripts %}
         {{ super() }}
-        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script>
+        function loadMapScenario() {
+            var input = document.getElementById('address');
+            var autoComplete = new Microsoft.Maps.Autocomplete(input, {
+                maxResults: 5,
+                suggestionList: suggestions
+            });
+
+            autoComplete.addEventListener('selectedSuggestion', function (event) {
+                var selectedSuggestion = event.selectedSuggestion;
+                var coordinates = selectedSuggestion.location;
+
+                document.getElementById('latitude').value = coordinates.latitude;
+                document.getElementById('longitude').value = coordinates.longitude;
+            });
+        }
+    </script>
+    <script>
+        var map;
+    
+        function GetMap() {
+            map = new Microsoft.Maps.Map('#myMap', {});
+    
+            Microsoft.Maps.loadModule('Microsoft.Maps.AutoSuggest', function () {
+                var manager = new Microsoft.Maps.AutosuggestManager({ map: map });
+                manager.attachAutosuggest('#searchBox', '#searchBoxContainer', suggestionSelected);
+            });
+        }
+    
+        function suggestionSelected(result) {
+            //Remove previously selected suggestions from the map.
+            map.entities.clear();
+    
+            //Show the suggestion as a pushpin and center map over it.
+            var pin = new Microsoft.Maps.Pushpin(result.location);
+            map.entities.push(pin);
+    
+            map.setView({ bounds: result.bestView });
+        }
+    </script>
+    <script>
+        // Dynamic load the Bing Maps Key and Script
+        // Get your own Bing Maps key at https://www.microsoft.com/maps
+        (async () => {
+            let script = document.createElement("script");
+            let bingKey = await fetch("https://samples.azuremaps.com/api/GetBingMapsKey").then(r => r.text()).then(key => { return key });
+            script.setAttribute("src", `https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=AqCmXCSXpin76Mn5hLW5CVVvqbY88Ae9TbqET5mzzwohbCvs-ZbboA-OWuAoNThc`);
+            document.body.appendChild(script);
+        })();
+      </script>
     {% endblock %}
 {% endblock %}
