--- a/templates/model.html
+++ b/templates/model.html
@@ -100,20 +100,31 @@
       </form>
     </div>
     <div class="col-md-6">
-      <div id="map" style="height: 400px;"></div>
+      <div id="mapContainer">
+        <div id="map" style="height: 400px;"></div>
+      </div>
     </div>
   </div>
   <div class="row">
-    {% if prediction %}
-  <div class="my-8 justify-content-center">
-    <h2 class="text-2xl font-bold mb-4 text-center">Prediction Result</h2>
-    <div class="grid grid-cols-2 gap-4"><div>
-    <h2 class="font-weight-normal text-center"><strong>Votre résultat:</strong> {{ prediction }} pour la sélection suivante:</h2>
-    <div class="table row justify-content-center">{{ table|safe }}</div>
-  </div>
-</div>
-</div>
-{% endif %}
+    {% if ghgemissions and energyuse %}
+    <div class="my-8 justify-content-center">
+      <div>
+        <h2 class="font-weight-normal text-center">
+          <strong>Your result:</strong>
+        </h2>
+        <div class="table row justify-content-center">{{ table|safe }}</div>
+      </div>
+      <div>
+        <h2 class="font-weight-normal text-center"><strong>For the following selection:</strong></h2>
+        <h3 class="font-weight-normal text-center">
+          <strong>Total GHG Emissions:</strong> {{ ghgemissions }} équivalent tonne CO2
+        </h3>
+        <h3 class="font-weight-normal text-center">
+          <strong>Site Energy Use:</strong> {{ energyuse }} kWh
+        </h3>
+      </div>
+    </div>
+    {% endif %}
   </div>
 </div>
 {% endblock %}
