--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,21 +1,32 @@
-.navbar-brand {
-    font-size: 4rem!important;
-}
+  .navbar {
+    display: flex;
+    align-items: center;
+  }
 
-.navbar-nav li a.nav-link {
-    font-size: 4rem!important;
-}
+  .navbar-brand {
+    display: flex;
+    align-items: center;
+  }
+
+  .navbar-nav {
+    display: flex;
+    align-items: center;
+  }
+
+  .navbar-brand {
+    display: inline-block;
+    align-items: center;
+    margin-right: 1rem;
+    font-size: 2rem;
+    line-height: inherit;
+    white-space: nowrap;
+  }
+
+  .navbar-light .navbar-nav .nav-link {
+    font-size: 1.8rem;
+  }
 
 
-body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    text-align: left;
-    background-color: #fff; }
 
 #map {
     height: 400px;
@@ -50,8 +61,3 @@ body {
 .msls-container ul li:hover {
     background-color: #f5f5f5;
 }
-
-
-
-
-
