--- a/templates/index.html
+++ b/templates/index.html
@@ -155,6 +155,11 @@
         <p>En suivant les modalités pédagogiques et en réalisant les livrables demandés, vous serez évalué sur la performance de vos modèles, votre compréhension des données, votre capacité à respecter les délais et la qualité globale de votre travail.</p>
         <p>À la fin du projet, vous présenterez vos travaux et livrables lors d'une présentation de 20 minutes.</p>
         
+        <h2>Schéma fonctionnel du projet:</h2>
+        <div class="roadmap">
+            <img src="static/img/Roadmap_CO2_TM1.jpg" class="d-block w-100" alt="Roadmap">
+        </div>
+        
         <a href="#" class="back-to-top" id="backToTopBtn">
             <i class="fas fa-arrow-up"></i>
         </a>
