--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -63,6 +63,9 @@
                     <a class="nav-link" href="{{ url_for('model') }}">Model</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('prediction_csv') }}">Prediction_csv</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="https://github.com/data-IA-2022/CO2_Maud_Tarik" target="_blank">
                         <i class="bi bi-github"></i> GitHub
                     </a>
