update alerte message add

--- a/templates/prediction_csv.html
+++ b/templates/prediction_csv.html
@@ -21,7 +21,7 @@
 
 <!-- Display error message if any -->
 {% if error %}
-<div class="alert alert-danger" role="alert">
+<div class="alert alert-danger" id="error" role="alert">
   {{ error }}
 </div>
 {% endif %}
