--- a/templates/base.html
+++ b/templates/base.html
@@ -144,6 +144,19 @@
       firstTabLink.click();
     });
   </script>
+  <script type="text/javascript">
+
+    $(document).ready(function () {
+     
+    window.setTimeout(function() {
+        $(".alert").fadeTo(1000, 0).slideUp(1000, function(){
+            $(this).remove(); 
+        });
+    }, 5000);
+     
+    });
+  </script>
+  
 {% endblock %}
 
 {% block body %}
