--- a/templates/prediction_csv.html
+++ b/templates/prediction_csv.html
@@ -28,28 +28,42 @@
 
 <!-- Display processed CSV table if available -->
 {% if csv_processed %}
-<div class="row mt-4">
-  <div class="col-md-6">
-    <h2 class="font-weight-normal">Processed CSV File:</h2>
-    <a href="{{ csv_result_url }}" download class="btn btn-primary">Download Result</a>
-    <table class="table mt-4">
-      <thead>
-        <tr>
-          {% for column in csv_data.columns %}
-          <th>{{ column }}</th>
-          {% endfor %}
-        </tr>
-      </thead>
-      <tbody>
-        {% for row in csv_data.values[:5] %}
-        <tr>
-          {% for value in row %}
-          <td>{{ value }}</td>
-          {% endfor %}
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card mt-4">
+        <div class="card-body">
+          <h2 class="font-weight-normal">Processed CSV File:</h2>
+          {{ csv_result_url }}
+          <a href="{{ url_for('download_result', filename=filename) }}" class="btn btn-primary">Download Result</a>
+          <div class="table-responsive">
+            <table class="table mt-4" style="width: 100%;">
+              <colgroup>
+                {% for _ in csv_data.columns %}
+                <col style="width: 10%;" />
+                {% endfor %}
+              </colgroup>
+              <thead>
+                <tr>
+                  {% for column in csv_data.columns %}
+                  <th>{{ column }}</th>
+                  {% endfor %}
+                </tr>
+              </thead>
+              <tbody>
+                {% for row in csv_data.values %}
+                <tr>
+                  {% for value in row %}
+                  <td>{{ value }}</td>
+                  {% endfor %}
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 {% endif %}
