--- a/templates/model.html
+++ b/templates/model.html
@@ -121,7 +121,7 @@
             <strong>Total GHG Emissions:</strong> {{ ghgemissions }} équivalent tonne CO2
           </h3>
           <h3 class="font-weight-normal text-center">
-            <strong>Site Energy Use:</strong> {{ energyuse }} kWh
+            <strong>Site Energy Use:</strong> {{ energyuse }} kBtu
           </h3>
           <div class="text-center">
             <button type="button" class="btn btn-primary" onclick="clearResult()">Clear Result</button>
